# raytrax

./: .envrc  .gitignore  main.py  pyproject.toml  ragged.py  todo.md
sandbox/: mesh_management.py
scripts/: CLAUDE.md  main.py  visualise.py
src/: intersections.py  main.py
src/jax_test/: intersections.py  main.py
src/raytrax/: cellshapes.py  grid.py  main.py
test/: test_intersections.py
tests/: test_intersections.py
